# Taffy-Studio

./: .dockerignore  .gitattributes  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  DOCKER.md  LICENSE  MIGRATION.md  README.en.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/taffy-core/: Cargo.toml
crates/taffy-core/src/: db.rs  lib.rs  llm.rs  mcp.rs  mcp_import.rs  skills.rs
crates/taffy-web/: Cargo.toml
crates/taffy-web/src/: main.rs  static_files.rs
docker/: android.Dockerfile  ci-run.sh  ci.Dockerfile  linux.Dockerfile  web.Dockerfile
docs/: MIGRATIONS.md  UPDATER.md
scripts/: build-android.ps1  build-android.sh  build-docker.ps1  build-docker.sh  build-linux.ps1  build-linux.sh  build-mac.sh  build-updater-manifest.mjs  build-web.ps1  build-web.sh  build-windows.ps1  build-windows.sh  build.ps1  build.sh  ci-local.ps1  ci-local.sh  clean.ps1  clean.sh  dev-docker.ps1  dev-docker.sh  dev-mac.sh  dev.ps1  dev.sh  gen-icons.ps1  gen-icons.sh  setup-updater.ps1  setup-updater.sh
scripts/lib/: common.ps1  common.sh
scripts/tasks/: build-android.ps1  build-android.sh  build-docker.ps1  build-docker.sh  build-linux.ps1  build-linux.sh  build-mac.sh  build-updater-manifest.mjs  build-web.ps1  build-web.sh  build-windows.ps1  build-windows.sh  ci-local.ps1  ci-local.sh  dev-docker.ps1  dev-docker.sh  dev-mac.sh  gen-icons.ps1  gen-icons.sh  setup-updater.ps1  setup-updater.sh
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  mcp.rs
src/components/: AttachmentChips.tsx  ChatPanel.tsx  ConvoMenu.tsx  ErrorBoundary.tsx  Icon.tsx  KnowledgePanel.tsx  McpMarket.tsx  McpPanel.tsx  MessageContent.tsx  ModelPicker.tsx  SearchPalette.tsx  SettingsPanel.tsx  SkillsPanel.tsx  StoragePanel.tsx  TemplatePicker.tsx
src/i18n/: index.tsx  strings.ts
src/lib/: attachments.ts  autoClose.ts  capabilities.ts  convoPrefs.ts  db.ts  doctext.ts  ipc.ts  llm.ts  mcp.ts  mcpMarket.ts  ocr.ts  rag.ts  settings.ts  skills.ts  storage.ts  store.ts  summarize.ts  templates.ts  theme.tsx
src/services/: api.ts  tauriApi.ts  webApi.ts
