# Cargo workspace root.
#
# Members:
#   src-tauri          — Tauri desktop/mobile shell (thin; delegates to taffy-core)
#   crates/taffy-core  — platform-agnostic core logic (LLM dispatch, embeddings, …)
#
# A second shell — crates/taffy-web (axum HTTP server for self-hosted / Docker) —
# will join this list in a later milestone. Both shells depend on taffy-core so
# the business logic is written once. See docs/internal/MULTI-PLATFORM-ARCHITECTURE.md.
[workspace]
members = ["src-tauri", "crates/taffy-core", "crates/taffy-web"]
resolver = "2"

# ===========================================================================
# Build profiles  —  tuned for fast iteration; release output unchanged.
# Workspace-level, so every member (src-tauri, taffy-core, taffy-web) inherits.
# ===========================================================================

[profile.dev]
# `line-tables-only` keeps panic locations + readable backtraces but drops the
# heavy DWARF that dominates link time and disk usage. Big incremental-build win
# with no practical debugging loss for app work. (Was the default "full" = 2.)
debug = "line-tables-only"

[profile.dev.package."*"]
# Compile third-party deps with light optimisation. They change rarely, so the
# cost is paid once and then cached; in return the dev binary and `tauri dev`
# run noticeably faster. Your own crates stay at opt-level 0 for fast recompiles.
# Trade-off: the *first* (cold) build is a bit slower — cached builds are not.
opt-level = 1

[profile.release]
# Size-tuned release. The Android APK is dominated by the Rust native lib (.so),
# so these settings shrink it dramatically vs an untuned/debug build:
#   opt-level "z"  — optimise for size (the JS layer does the heavy lifting, so
#                    the shell's micro-perf barely matters).
#   lto "thin"     — cross-crate inlining + dead-code elimination; "thin" keeps
#                    build time sane vs full LTO while capturing most of the win.
#   codegen-units 1— better cross-module optimisation / smaller output.
#   strip "symbols"— drop symbol tables + debuginfo from the binary (the single
#                    biggest size lever for the .so).
# panic is intentionally left as "unwind": Tauri's command layer relies on
# catch_unwind, so "abort" could change error-handling behaviour.
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
