# taffy-core — platform-agnostic business logic shared by every shell
# (Tauri desktop/mobile today; the axum web server later). No `tauri::` or
# `axum::` types may appear in this crate's public API — that's what lets both
# shells depend on it.
[package]
name = "taffy-core"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls so we don't depend on system OpenSSL (matters on Android/Alpine).
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "http2",
  "stream",
] }
# Streaming primitive: `chat_stream` yields StreamEvents as an async Stream so
# both shells (Tauri Channel adapter, axum SSE) can consume it.
futures-util = "0.3"
async-stream = "0.3"
# MCP stdio client: `process` + `io-util` spawn each server and read/write its
# pipes; `sync` + `time` back the request/response oneshot map + timeouts; `rt`
# + `macros` let the agentic loop spawn the background reader task.
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
  "macros",
] }
# Data layer: bundled SQLite (with FTS5) so neither shell needs a system lib.
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
# Resolve the per-user config dir so the desktop + web shells default to the
# SAME database location.
dirs = "6"
# Skill packages import from .zip bundles. deflate-only keeps the dep lean
# (no bzip2/zstd/aes); pure-Rust miniz_oxide so there's no system lib.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Windows only: a Job Object so killing a stdio MCP server (which we launch via
# `cmd /c npx …`) tears down the whole process tree, not just the cmd.exe shim.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
